--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "blockly": "^12.2.0",
     "react": "^19.1.0",
+    "react-arborist": "^3.4.3",
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
