--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@blockly/theme-dark": "^8.0.1",
     "blockly": "^12.2.0",
     "react": "^19.1.0",
     "react-arborist": "^3.4.3",
