Add serialization + deserialization

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "@blockly/theme-dark": "^8.0.1",
     "blockly": "^12.2.0",
+    "events": "^3.3.0",
     "gh-pages": "^6.3.0",
+    "jszip": "^3.10.1",
     "react": "^19.1.0",
     "react-arborist": "^3.4.3",
     "react-dom": "^19.1.0"
